# llm-local-search

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: main.cpp
src/agents/: image_agent.cpp  image_agent.h  orchestrator.cpp  orchestrator.h  query_agent.cpp  query_agent.h  ranking_agent.cpp  ranking_agent.h  search_agent.cpp  search_agent.h
src/embedding/: embedder.cpp  embedder.h
src/indexing/: chunker.cpp  chunker.h  content_extractor.cpp  content_extractor.h  file_scanner.cpp  file_scanner.h  metadata_extractor.cpp  metadata_extractor.h  type_classifier.cpp  type_classifier.h
src/server/: search_server.cpp  search_server.h
src/storage/: vector_store.cpp  vector_store.h
